--- a/config.php.in
+++ b/config.php.in
@@ -22,3 +22,8 @@ define('MONTH_NEW_YEAR', 9);
 define('PDO_DSN', 'sqlite:db.sqlite');
 define('PDO_USER', null);
 define('PDO_PWD', null);
+
+define('CAS_HOSTNAME', 'id.tecnico.ulisboa.pt');
+define('CAS_PORT', 443);
+define('CAS_URI', '/cas');
+define('CAS_CA_CERT', 'cas.pem');
