--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,7 @@
-<Files *.php>
+RewriteCond %{SERVER_PORT} ^80$
+RewriteRule ^(.*)$ https://pic1dei.tecnico.ulisboa.pt/$1 [L,R=301]
+
+<Files *>
   Order Deny,Allow
   Deny from all
 </Files>
