try out doctrine ORM (ongoing)

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,10 @@
 {
   "require": {
+    "doctrine/orm": "2.*",
+    "doctrine/annotations": "*",
+    "doctrine/cache": "1.*"
+  },
+  "autoload": {
+    "psr-0": {"": "entities/"}
   }
 }
