--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
         run: ./.github/scripts/syntax-check.sh
 
       - name: Run Install script
-        run: php${{ matrix.phpversion }} install.php
+        run: php${{ matrix.phpversion }} doctrine.php orm:schema-tool:create
 
     env:
       PHP_VERSION: ${{ matrix.phpversion }}
