implement deadline for proj proposal submission

--- a/config.php.in
+++ b/config.php.in
@@ -23,3 +23,5 @@ define('DB_DSN', 'sqlite://file://' . __DIR__ . '/db.sqlite');
 
 define('FENIX_APP_ID', '');
 define('FENIX_CLIENT_SECRET', '');
+
+define('TIMEZONE', 'Europe/Lisbon');
