--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         os:         [ubuntu-20.04]
-        phpversion: ["8.1", "8.2"]
+        phpversion: ["7.4", "8.1", "8.2"]
 
     steps:
       - name: Checkout code
