--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,8 @@
   "require": {
     "doctrine/orm": "*",
     "doctrine/annotations": "*",
+    "knplabs/github-api": "*",
+    "m4tthumphrey/php-gitlab-api": "*",
     "symfony/cache": "*",
     "symfony/http-client": "*",
     "symfony/mailgun-mailer": "*"
