--- a/config.php.in
+++ b/config.php.in
@@ -25,6 +25,7 @@ define('FENIX_APP_ID', '');
 define('FENIX_CLIENT_SECRET', '');
 
 define('MAILER_DSN', '');
+define('EMAIL_FROM_ADDR', '');
 define('DEBUG_EMAIL_DST', '');
 
 define('TIMEZONE', 'Europe/Lisbon');
