silence some ORM warnings

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,5 +34,8 @@ jobs:
       - name: Generate proxies
         run: php${{ matrix.phpversion }} doctrine.php orm:generate-proxies
 
+      - name: Check ORM mapping
+        run: php${{ matrix.phpversion }} doctrine.php orm:validate-schema |& grep -q "The mapping files are correct"
+
     env:
       PHP_VERSION: ${{ matrix.phpversion }}
