--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "psr-4": {"": "entities"}
   },
   "config": {
+    "optimize-autoloader": true,
     "platform": {
       "php": "7.4"
     },
