--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,8 +9,8 @@ jobs:
 
     strategy:
       matrix:
-        os:         [ubuntu-20.04]
-        phpversion: ["7.4", "8.1", "8.2", "8.3"]
+        os:         [ubuntu-22.04, ubuntu-24.04]
+        phpversion: [""]
 
     steps:
       - name: Checkout code
