--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        os:         [ubuntu-22.04, ubuntu-24.04]
+        os:         [ubuntu-24.04]
         phpversion: [""]
 
     steps:
