--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "mpratt/embera": "*",
     "nyholm/psr7": "*",
     "symfony/cache": "*",
+    "symfony/expression-language": "*",
     "symfony/form": "*",
     "symfony/http-client": "*",
     "symfony/http-foundation": "*",
