--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        os:         [ubuntu-24.04]
+        os:         [ubuntu-latest]
         phpversion: ["7.4", "8.0", "8.1", "8.2", "8.3", "8.4"]
 
     steps:
