--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
-#RewriteCond %{SERVER_PORT} ^80$
-#RewriteRule ^(.*)$ https://pic1dei.tecnico.ulisboa.pt/$1 [L,R=301]
+RewriteCond %{SERVER_PORT} ^80$
+RewriteRule ^(.*)$ https://pic1dei.tecnico.ulisboa.pt/$1 [L,R=301]
 
 RewriteCond %{REQUEST_URI} !^/~pic1dei.daemon/$
 RewriteCond %{REQUEST_URI} !^/~pic1dei.daemon/index\.php$
