--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "*",
     "bootstrap-icons": "*",
     "plotly.js": "*",
+    "swiper": "^12.0.1",
     "tabulator-tables": "*"
   },
   "browserslist": [
