--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         os:         [ubuntu-latest]
-        phpversion: ["8.2", "8.4"]
+        phpversion: ["8.2", "8.4", "8.5"]
 
     steps:
       - name: Checkout code
